# BE

./: .dockerignore  .env.dev  API-Documentation.md  Dockerfile  README.md  api-test-unified.http  build.gradle  docker-compose.yml
.claude/: CLAUDE.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-기능-추가--템플릿.md
.github/workflows/: cd.yml  ci-simple.yml  ci.yml  pr-check.yml
docker/mongodb/init/: 01-init-mongodb.js
docker/mysql/init/: 01-init-database.sql
docker/opensearch/config/: jvm.options  log4j2.properties  opensearch.keystore  opensearch.yml
docker/rabbitmq/: rabbitmq.conf
docker/redis/: redis.conf
docs/: API_OVERVIEW.md  BADGE_EXAMPLES.md  DOCKER_SETUP.md  GITHUB_ACTIONS_SETUP.md  HYBRID_SYSTEM_GUIDE.md  README_LANGUAGE_BLOCKS.md  mermaid.md  rest-api.md  schema.md
docs/testing/: 01-spring-boot-testing-fundamentals.md  02-mockito-complete-guide.md  03-spring-security-testing-guide.md
python_crawler_example/: .env.example  Dockerfile  README.md  README_UPDATED.md  crawler_worker.py  docker-compose.yml  pyproject.toml  requirements.txt
python_crawler_example/crawler/: __init__.py  config.py  health.py  main.py  models.py  naver_crawler.py  server.py
scripts/: README.md  dev-app.sh  dev-docker.sh  docker-setup.sh  fix_opensearch_index.sh  fix_opensearch_index_simple.sh
src/docs/: CONFIG_GUIDE.md
src/main/java/com/commonground/be/: BeApplication.java
src/main/java/com/commonground/be/domain/redis/: RedisService.java
src/main/java/com/commonground/be/global/config/: WebConfig.java  (+2 more)
src/main/resources/: application.yml
src/test/java/com/commonground/be/: BeApplicationTests.java
src/test/java/com/commonground/be/config/: TestSecurityConfig.java
src/test/resources/: application-test.yml
(+170 files in other folders)
