[tool.poetry]
name = "naver-news-crawler"
version = "1.0.0"
description = "네이버 뉴스 크롤링 서비스 - Java 백엔드와 RabbitMQ 연동 또는 독립 실행 가능"
authors = ["CommonGround Team <dev@commonground.com>"]
readme = "README.md"
packages = [{include = "crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
aio-pika = "^9.4.3"
aiohttp = "^3.9.1"
playwright = "^1.40.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
colorama = "^0.4.6"
click = "^8.1.7"
asyncio-mqtt = {version = "^0.16.1", optional = true}
httpx = "^0.25.2"
pydantic-settings = "^2.1.0"

[tool.poetry.extras]
monitoring = ["prometheus-client"]
mqtt = ["asyncio-mqtt"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
crawler = "crawler.main:cli"
worker = "crawler.worker:main"
server = "crawler.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["crawler"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]